# canary

./: .gitignore  README.md  sgp40_voc.c  sgp40_voc_main.c
dashboard/: CMakeLists.txt  Main.qml  SensorChart.qml  main.cpp  mqttcontroller.cpp  mqttcontroller.h
overlays/: bmp388.dts  canary-hat.dts  eeprom_settings.txt  mpu6050.dts  sgp40.dts  sht45.dts  tmp119.dts
pcb/: canary.kicad_pcb  canary.kicad_pro  canary.kicad_sch
sgp40_voc/: Makefile  sgp40_voc_algo.c  sgp40_voc_algo.h
tmp119/: Makefile  tmp119.c
tools/: log_temps.py
userspace/: sgp40-compensation-feeder
userspace/canary-mqtt-publisher/: Makefile  canary-mqtt-publisher.service  main.c
userspace/sgp40-compensation/: sgp40-compensation.service
